--- a/themes/purehugotiago/layouts/partials/header.html
+++ b/themes/purehugotiago/layouts/partials/header.html
@@ -25,7 +25,9 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
     <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href='{{ "index.xml" | absURL }}' />
-    <link rel="stylesheet" href="/css/tiago.css"/>
+    <link rel="stylesheet" href="/css/blog.css"/>
+    <link rel="stylesheet" href="/css/syntax-highlighter.css"/>
+    <link rel="stylesheet" href="/css/dark-theme.css"/>
     <link rel="stylesheet" href="https://pitaco.dalligna.com/css/pitaco.css"/>
 </head>
 <body>
