--- a/themes/purehugotiago/layouts/_default/single.html
+++ b/themes/purehugotiago/layouts/_default/single.html
@@ -17,31 +17,14 @@
                             {{ with .Params.author }}
                                 By <strong class="post-author">{{ . }}</strong>
                             {{ end }}
-                            {{ if isset .Params "categories" }}
+                            {{ if isset .Params "tags" }}
                                 under 
-                                {{ range .Params.categories }}
-                                    <a class="post-category post-category-{{ . }}" href='{{ ( printf "categories/%s" . ) | absURL }}'>{{ . }}</a>
+                                {{ range .Params.tags }}
+                                    <a class="post-category post-category-{{ . }}" href='{{ ( printf "tags/%s" . ) | absURL }}'>{{ . }}</a>
                                 {{ end }}
                             {{ end }}
                         </p>
                     </header>
-                    {{ if not .Site.Params.hideShareOptions }}
-                    <div class="post-share">
-                        <div class="post-share-links">
-                            <h4 style="">Share</h4>
-                            {{ if isset .Site.Params "facebook" }}
-                            <a href="#" data-type="facebook" data-url="{{ .Permalink }}" data-title="{{ .Title }}" data-description="{{ .Description }}" data-media="" class="prettySocial fa fa-facebook"></a>
-                            {{ end }}
-                            {{ if isset .Site.Params "googleplus" }}
-                            <a href="#" data-type="googleplus" data-url="{{ .Permalink }}" data-description="{{ .Description }}" class="prettySocial fa fa-google-plus"></a>
-                            {{ end }}
-                            {{ if isset .Site.Params "twitter" }}
-                            <a href="#" data-type="twitter" data-url="{{ .Permalink }}" data-description="{{ .Description }}" data-via="{{ .Site.Params.twitter }}" class="prettySocial fa fa-twitter"></a>
-                            {{ end }}
-                            
-                        </div>
-                    </div>
-                    {{ end }}
                     <div class="post-description">
                         {{ .Content }}
                     </div>
