--- a/themes/purehugotiago/layouts/index.html
+++ b/themes/purehugotiago/layouts/index.html
@@ -21,9 +21,11 @@
                             {{ with .Params.author }}
                                 By <strong class="post-author">{{ . }}</strong>
                             {{ end }}
-                            {{ if isset .Params "categories" }}
+                            {{ if isset .Params "tags" }}
                                 under 
-                                {{ range .Params.categories }}<a class="post-category post-category-{{ . }}" href='{{ ( printf "categories/%s" . ) | absURL }}'>{{ . }}</a>{{ end }}
+                                {{ range .Params.tags }}
+                                    <a class="post-category post-term-{{ . }}" href='{{ ( printf "tags/%s" . ) | absURL }}'>{{ . }}</a>
+                                {{ end }}
                             {{ end }}
                         </p>
                     </header>
