--- a/themes/purehugotiago/static/css/blog.css
+++ b/themes/purehugotiago/static/css/blog.css
@@ -189,3 +189,26 @@ img {
     max-height: 50px;
     border-radius: 0px !important;
 }
+
+table {
+    border-collapse: collapse;
+  }
+
+table thead {
+	background-color: #333;
+	color: white;
+	font-size: 0.875rem;
+	text-transform: uppercase;
+	letter-spacing: 2%;
+}
+
+table tbody td {
+    /* background-color: #36c; */
+    color: #fff;
+    text-align: left;
+    padding: 2px 10px
+  }
+  
+table tbody tr:nth-child(even) td {
+    background-color: rgb(40, 43, 49);
+}
