verify google website

--- a/themes/purehugotiago/layouts/partials/header.html
+++ b/themes/purehugotiago/layouts/partials/header.html
@@ -17,6 +17,8 @@
     <meta property="og:title" content="{{ .Title }} &middot; {{ .Site.Title }}">
     <meta property="og:description" content="{{ if .IsNode }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ else }}{{ with .Description }}{{ . }}{{ end }}{{ end }}">
 
+    <meta name="google-site-verification" content="bRKabAms_cA5W9Oj1PaFxuTxD2fkRg1q-I6TEbN6lfY" />
+
     <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oxygen:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/pure-min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/grids-responsive-min.css">
