--- a/themes/purehugotiago/layouts/partials/header.html
+++ b/themes/purehugotiago/layouts/partials/header.html
@@ -6,6 +6,7 @@
     <title>{{ .Title }} &middot; {{ .Site.Title }}</title>
 
     <meta name="description" content="{{ if .IsNode }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ else }}{{ with .Description }}{{ . }}{{ end }}{{ end }}">
+    <link rel="shortcut icon" href="/resources/logo.png">
 
     {{hugo.Generator}}
     <meta name="twitter:card" content="summary">
@@ -16,8 +17,6 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="{{ .Title }} &middot; {{ .Site.Title }}">
     <meta property="og:description" content="{{ if .IsNode }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ else }}{{ with .Description }}{{ . }}{{ end }}{{ end }}">
-
-    <meta name="google-site-verification" content="bRKabAms_cA5W9Oj1PaFxuTxD2fkRg1q-I6TEbN6lfY" />
 
     <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oxygen:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/pure-min.css">
